[gd_scene load_steps=3 format=2]

[ext_resource path="res://Hex/Hex.gd" type="Script" id=1]
[ext_resource path="res://Hex/HexPiece.tscn" type="PackedScene" id=2]

[node name="Hex" type="Node2D"]
position = Vector2( 640, 360 )
script = ExtResource( 1 )

[node name="HexPiece1" parent="." instance=ExtResource( 2 )]
rotation = 1.0472
scale = Vector2( 0.6, 0.6 )

[node name="HexPiece2" parent="." instance=ExtResource( 2 )]
rotation = 2.0944
scale = Vector2( 0.6, 0.6 )

[node name="HexPiece3" parent="." instance=ExtResource( 2 )]
rotation = 3.14159
scale = Vector2( 0.6, 0.6 )

[node name="HexPiece4" parent="." instance=ExtResource( 2 )]
rotation = 4.18879
scale = Vector2( 0.6, 0.6 )

[node name="HexPiece5" parent="." instance=ExtResource( 2 )]
rotation = 5.23599
scale = Vector2( 0.6, 0.6 )

[node name="HexPiece6" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.6, 0.6 )
[connection signal="piece_touched" from="HexPiece1" to="." method="_on_HexPiece_piece_touched"]
[connection signal="piece_touched" from="HexPiece2" to="." method="_on_HexPiece_piece_touched"]
[connection signal="piece_touched" from="HexPiece3" to="." method="_on_HexPiece_piece_touched"]
[connection signal="piece_touched" from="HexPiece4" to="." method="_on_HexPiece_piece_touched"]
[connection signal="piece_touched" from="HexPiece5" to="." method="_on_HexPiece_piece_touched"]
[connection signal="piece_touched" from="HexPiece6" to="." method="_on_HexPiece_piece_touched"]
